petite modifications sur le .ini public

--- a/param.ini
+++ b/param.ini
@@ -2,10 +2,10 @@
 
 [serveur]
 ip=ip ou url de la base
-base_etudes=etudes_hn
+base_etudes=nom_de_la_base
 schema=suivi_etudes
-login=login pour la base
-mdp=mdp pour la base
+login=login_pour_la_base
+mdp=mdp_pour_la_base
 
 [base de données ancienne version]
 bop=bop
